# some-mcs

./: .dockerignore  Dockerfile  README.md  pyproject.toml  setup.cfg
app/: cli.py  settings.py
app/entities/api/: create.py
app/mappers/api/: create.py
app/repositories/: pg_models.py
app/repositories/pg_widget/: repo.py
app/repositories/users/: entities.py  repo.py
app/services/: create.py
app/web/: dependencies.py  router.py
